[metadata]
name = pingcode
version = 1.0
author = pingjuiliao
author_email = pingjuiliao@gmail.com
description = Data Structure and Algorithm practices and notes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
# license_file = LICENSE.txt
